==> oy2n/UAV-Quadcopter-freertos-dma/OyznFCode/drive/src/ws2812.c <==
#include <string.h>
#include "ws2812.h"
#include "delay.h"

#include "FreeRTOS.h"
#include "semphr.h"
#include "main.h"

#define TIMING_ONE  71	// 高电平时间计数值
#define TIMING_ZERO 33	// 低电平时间计数值

u32 dmaBuffer0[24];
u32 dmaBuffer1[24];

static xSemaphoreHandle allLedDone = NULL;

extern DMA_HandleTypeDef hdma_tim2_ch1;
extern TIM_HandleTypeDef htim2;

//ws2812初始化
void ws2812Init(void)
{
	HAL_DMA_Start(&hdma_tim2_ch1, (u32)dmaBuffer0, (u32)&TIM2->CCR1, 24);
	HAL_DMAEx_MultiBufferStart(&hdma_tim2_ch1, (u32)dmaBuffer0, (u32)&TIM2->CCR1, MEMORY0,24);
//	TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;
//	TIM_OCInitTypeDef  TIM_OCInitStructure;
//	GPIO_InitTypeDef GPIO_InitStructure;
//	DMA_InitTypeDef DMA_InitStructure;
//	NVIC_InitTypeDef NVIC_InitStructure;
//
//	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);
//	RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
//	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA1, ENABLE);
//
//	//初始化LED_STRIP pin PA15
//	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15;
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_NOPULL;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_Init(GPIOA, &GPIO_InitStructure);
//	GPIO_PinAFConfig(GPIOA, GPIO_PinSource15, GPIO_AF_TIM2);
//
//	TIM_TimeBaseStructure.TIM_Period = (105 - 1); //800kHz
//	TIM_TimeBaseStructure.TIM_Prescaler = 0;
//	TIM_TimeBaseStructure.TIM_ClockDivision = 0;
//	TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
//	TIM_TimeBaseStructure.TIM_RepetitionCounter = 0;
//	TIM_TimeBaseInit(TIM2, &TIM_TimeBaseStructure);
//
//	TIM_OCInitStructure.TIM_OCMode = TIM_OCMode_PWM1;
//	TIM_OCInitStructure.TIM_OutputState = TIM_OutputState_Enable;
//	TIM_OCInitStructure.TIM_Pulse = 0;
//	TIM_OCInitStructure.TIM_OCPolarity = TIM_OCPolarity_High;
//	TIM_OC1Init(TIM2, &TIM_OCInitStructure);
//
//	TIM_OC1PreloadConfig(TIM2, TIM_OCPreload_Enable);
//	TIM_DMACmd(TIM2, TIM_DMA_CC1, ENABLE);
////	TIM_Cmd(TIM2, ENABLE);
//
//	DMA_DeInit(DMA1_Stream5);
//	DMA_InitStructure.DMA_PeripheralBaseAddr = (u32)&TIM2->CCR1;
//	DMA_InitStructure.DMA_Memory0BaseAddr = (u32)dmaBuffer0;
//	DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
//	DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;
//	DMA_InitStructure.DMA_MemoryDataSize = DMA_PeripheralDataSize_Word;
//	DMA_InitStructure.DMA_BufferSize = 24;
//	DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
//	DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Word;
//	DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;
//	DMA_InitStructure.DMA_DIR = DMA_DIR_MemoryToPeripheral;
//	DMA_InitStructure.DMA_Mode = DMA_Mode_Circular;
//	DMA_InitStructure.DMA_Priority = DMA_Priority_High;
//	DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;
//	DMA_InitStructure.DMA_FIFOThreshold = DMA_FIFOThreshold_1QuarterFull ;
//	DMA_InitStructure.DMA_Channel = DMA_Channel_3;
//
//	DMA_DoubleBufferModeCmd(DMA1_Stream5, ENABLE);//使能双缓冲
//	DMA_DoubleBufferModeConfig(DMA1_Stream5, (u32)dmaBuffer1, DMA_Memory_0);
//	DMA_Init(DMA1_Stream5, &DMA_InitStructure);
//	DMA_ITConfig(DMA1_Stream5, DMA_IT_TC, ENABLE);
//
//	NVIC_InitStructure.NVIC_IRQChannel = DMA1_Stream5_IRQn;
//	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 9;
//	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
//	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
//	NVIC_Init(&NVIC_InitStructure);

	vSemaphoreCreateBinary(allLedDone);
}

//ws2812颜色填充
static void fillLed(u32 *buffer, u8 *color)
{
    int i;

    for(i=0; i<8; i++) // GREEN
	{
	    buffer[i] = ((color[1]<<i) & 0x0080) ? TIMING_ONE:TIMING_ZERO;
	}
	for(i=0; i<8; i++) // RED
	{
	    buffer[8+i] = ((color[0]<<i) & 0x0080) ? TIMING_ONE:TIMING_ZERO;
	}
	for(i=0; i<8; i++) // BLUE
	{
	    buffer[16+i] = ((color[2]<<i) & 0x0080) ? TIMING_ONE:TIMING_ZERO;
	}
}

static int current_led = 0;
static int total_led = 0;
static u8(*color_led)[3] = NULL;

//ws2812颜色发送至DMA
void ws2812Send(u8 (*color)[3], u16 len)
{
	if(len<1) return;

	xSemaphoreTake(allLedDone, portMAX_DELAY);//等待上一次发送完成

	current_led = 0;
	total_led = len;
	color_led = color;
	
	fillLed(dmaBuffer0, color_led[current_led]);
	current_led++;
	fillLed(dmaBuffer1, color_led[current_led]);
	current_led++;
	
	HAL_DMA_Start(&hdma_tim2_ch1, (u32)dmaBuffer0, (u32)&TIM2->CCR1, 24);
	__HAL_TIM_ENABLE(&htim2);
//	DMA_Cmd(DMA1_Stream5, ENABLE);	//使能DMA
//	TIM_Cmd(TIM2, ENABLE);			//使能定时器
}

//DMA中断处理
void DMA1_Stream5Callback()
{
	portBASE_TYPE xHigherPriorityTaskWoken;

	if (total_led == 0)
	{
//		TIM_Cmd(TIM2, DISABLE);
//		DMA_Cmd(DMA1_Stream5, DISABLE);
		__HAL_DMA_DISABLE(&hdma_tim2_ch1);
		__HAL_TIM_DISABLE(&htim2);
	}

	//if (DMA_GetITStatus(DMA1_Stream5, DMA_IT_TCIF5))
	if(__HAL_DMA_GET_FLAG(&hdma_tim2_ch1,DMA_FLAG_TCIF1_5))
	{
		//DMA_ClearITPendingBit(DMA1_Stream5, DMA_IT_TCIF5);
		__HAL_DMA_CLEAR_FLAG(&hdma_tim2_ch1,DMA_FLAG_TCIF1_5);
		//if(DMA_GetCurrentMemoryTarget(DMA1_Stream5) == DMA_Memory_0)//DMA当前使用内存0
		if(hdma_tim2_ch1.Instance->NDTR == MEMORY0)//DMA当前使用内存0
		{
			if (current_led<total_led)
				fillLed(dmaBuffer1, color_led[current_led]);
			else
				memset(dmaBuffer1, 0, sizeof(dmaBuffer1));
		}
		else//DMA当前使用内存1
		{
			if (current_led<total_led)
				fillLed(dmaBuffer0, color_led[current_led]);
			else
				memset(dmaBuffer0, 0, sizeof(dmaBuffer0));
		}
		current_led++;
	}

	if (current_led >= total_led+2) //多传输2个LED产生60us的低电平
	{
		xSemaphoreGiveFromISR(allLedDone, &xHigherPriorityTaskWoken);
//		TIM_Cmd(TIM2, DISABLE);
//		DMA_Cmd(DMA1_Stream5, DISABLE);
		__HAL_DMA_DISABLE(&hdma_tim2_ch1);
		__HAL_TIM_DISABLE(&htim2);
		total_led = 0;
	}
}
